- fix for wrong color in session invalid v-notification

--- a/material-addon/src/main/webapp/VAADIN/themes/material/components/v-notification.scss
+++ b/material-addon/src/main/webapp/VAADIN/themes/material/components/v-notification.scss
@@ -2,6 +2,9 @@
     .v-Notification .v-Notification-caption {
         color: valo-font-color($mat-window-color, 1.0);
     }
+    .v-Notification .v-Notification-description {
+        color: valo-font-color($mat-window-color, 1.0);
+    }
     .v-Notification {
         @extend .floating-border;
         @extend .z-depth-4;
